Generalize Apple Reminders personal data sync
